--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=devil" />
     <meta http-equiv="X-UA-Compatible" content="width-devil" />
-    <title>Documents</title>
-    <body></body>
+    <title>Prueba</title>
+    <body>
+        <h1>Segundo commit</h1>
+    </body>
   </head>
 </html>
